# Kanji-Deck-Creator

./: .gitignore  README.md  setup.cfg
src/kanji_deck_creator/data/: appdata.py  kanji_data.py
src/kanji_deck_creator/data/images/: character_images_go_here.txt
src/kanji_deck_creator/data/wanikani/: character_dependency_data_goes_here.txt
src/kanji_deck_creator/deckbuilder/: deck_builder.py
src/kanji_deck_creator/kanjigraph/: kanji_graph.py  kanji_node.py  kanji_type.py
src/kanji_deck_creator/parser/: tokenizer.py
src/kanji_deck_creator/unicode/: util.py
tst/: conftest.py  pytest.ini
tst/data/: test_kanji_data.py
tst/deck_builder/: test_deck_builder.py
tst/e2e/: test_end_to_end.py
tst/kanjigraph/: test_kanji_graph.py  test_kanji_node.py
tst/parser/: test_tokenizers.py
