[metadata]
name = kanji_deck_creator
version = 1.0.0

[options]
package_dir =
    =src
packages = find:
python_requires =
    >=3.6
install_requires =
    requests==2.26.0
    wanikani-api==0.5.1
    pyjisho==0.1.0
    genanki==0.10.0
    jaconv==0.3
    Janome==0.4.1
    pytest==6.2.4
scripts =
    bin/build_wanikani_index.py
    bin/create_deck.py

[options.packages.find]
where=src

[options.package_data]
* = *.txt
